<resources>
    <string name="app_name">ADM 365</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="current_tasks">Current Tasks</string>
    <string name="to_do_list">To Do List</string>
    <string name="add">Add</string>
    <string name="filters">Filters</string>
    <string name="status">Status : </string>
    <string name="mdue_date">Due Date :</string>
    <string name="modify_task">Modify Task</string>
    <string name="note">Note</string>
    <string name="done">Done</string>
    <string name="add_new_task">Add new Task</string>
    <string name="task_name">Task Title</string>
    <string name="task_in_detail">Description</string>
    <string name="task_assigned_to">Task Assigned to</string>
    <string name="due_date">Due date</string>
    <string name="assign">Assign</string>
    <string name="cancel">Cancel</string>
    <string name="modify">Modify</string>
    <string name="notifications">Notifications</string>
    <string name="my_calendar">My Calendar</string>
    <string name="bu_events">BU Events</string>
    <string name="your_feedback">Your Feedback</string>
    <string name="feedback">Feedback</string>
    <string name="your_report">Your Report</string>
    <string name="report_abuse">Report Abuse</string>
    <string name="abuse_type">Abuse type</string>
    <string name="no_attachment">no attachment</string>
    <string name="browse">Browse</string>
    <string name="dd_mm_yyyy">dd-mm-yyyy</string>
    <string name="primary_contact">Primary Contact</string>
    <string name="congratulations_arjun1">Congratulations FNU LNU!</string>
    <string name="congratulations_arjun2">Congratulations FNU LNU!</string>
    <string name="congratulations_arjun3">Congratulations FNU LNU!</string>
    <string name="completed_microsoft_azure">Completed Microsoft Azure</string>
    <string name="infrastructure_solutions_certification">Infrastructure Solutions Certification</string>
    <string name="please_wait">Please Wait</string>
    <string name="loding">Loding..</string>
    <string name="gallary">Gallary</string>
    <string name="photo">Photo</string>
    <string name="help">Help</string>
    <string name="announcements">Announcements</string>
    <string name="support_services">Support Services</string>
    <string name="home">Home</string>
    <string name="documents">Documents</string>
    <string name="my_documents">My Documents</string>
    <string name="search">Search</string>
    <string name="_0">0</string>
    <string name="assigned_tasks">Assigned Tasks</string>
    <string name="working_on">Working on</string>
    <string name="completed">Completed</string>
    <string name="hold">Hold</string>
    <string name="please_select_date">Please select due date</string>
    <string name="please_select_category">Please select category</string>
    <string name="please_select_prority">Please select prority</string>
    <string name="task_detail_are_empty">Task detail are empty</string>
    <string name="task_name_are_empty">Task name are empty</string>
    <string name="hr_policy">HR Policy</string>
    <string name="phone_number">Phone Number</string>

    <string-array name="status">
        <item>Not Started</item>
        <item>In Progress</item>
        <item>Completed</item>
        <item>Blocked</item>
    </string-array>
    <string-array name="category">
        <item>Select Category</item>
        <item>Planning</item>
        <item>Design</item>
        <item>Enginnering</item>
        <item>Marketing</item>
        <item>Research</item>
    </string-array>

    <string-array name="priority">
        <item>Select Priority</item>
        <item>Critical</item>
        <item>High</item>
        <item>Medium</item>
        <item>Low</item>
    </string-array>

</resources>