<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:clickable="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_title"
        style="@style/TextAppearance.AppCompat.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/add_new_task"
        android:textColor="#1b5287"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <EditText
        android:id="@+id/ed_task_name"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="40dp"
        android:hint="@string/task_name"
        android:padding="11dp"
        android:fontFamily="@font/roboto"
        android:textColorHint="#818181"
        android:textColor="#2d2d2d"
        android:singleLine="false"
        android:textSize="14sp"
        android:background="@drawable/edit_text_border"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title" />
    <EditText
        android:id="@+id/ed_task_in_detail"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="40dp"
        android:hint="@string/task_in_detail"
        android:textColorHint="#818181"
        android:padding="11dp"
        android:gravity="left"
        android:textSize="14sp"
        android:fontFamily="@font/roboto"
        android:textColor="#2d2d2d"
        android:singleLine="false"
        android:background="@drawable/edit_text_border"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_task_name" />
    <LinearLayout
        android:id="@+id/tv_task_assigned_to"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="40dp"
        android:gravity="center_vertical"
        android:paddingStart="9dp"
        android:background="@drawable/edit_text_border"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/ed_task_in_detail"
        app:layout_constraintTop_toBottomOf="@+id/ed_task_in_detail"
        android:orientation="horizontal"
        tools:ignore="RtlSymmetry">

        <Spinner
            android:id="@+id/autoCompleteTextView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:prompt="@string/status" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/tv_task_prority"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="40dp"
        android:gravity="center_vertical"
        android:paddingStart="9dp"
        android:background="@drawable/edit_text_border"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tv_task_assigned_to"
        app:layout_constraintTop_toBottomOf="@+id/tv_task_assigned_to"
        android:orientation="horizontal"
        tools:ignore="RtlSymmetry">

        <Spinner
            android:id="@+id/task_prority"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:prompt="@string/status" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_task_category"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="40dp"
        android:gravity="center_vertical"
        android:paddingStart="9dp"
        android:background="@drawable/edit_text_border"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tv_task_prority"
        app:layout_constraintTop_toBottomOf="@+id/tv_task_prority"
        android:orientation="horizontal"
        tools:ignore="RtlSymmetry">

        <Spinner
            android:id="@+id/task_category"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:prompt="@string/status" />
    </LinearLayout>
    <EditText
        android:id="@+id/tv_date"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/edit_text_border"
        android:hint="@string/due_date"
        android:focusable="false"
        android:textColor="#2d2d2d"
        android:textColorHint="#818181"
        android:padding="15dp"
        android:textSize="14sp"
        app:drawableRightCompat="@drawable/date_picker"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/ll_task_category"
        app:layout_constraintTop_toBottomOf="@+id/ll_task_category" />

    <TextView
        android:id="@+id/btn_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/cancel_btn"
        android:fontFamily="@font/roboto_bold"
        android:paddingLeft="30dp"
        android:paddingTop="10dp"
        android:paddingRight="30dp"
        android:paddingBottom="10dp"
        android:text="@string/cancel"
        android:textColor="#1b5287"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_date" />

    <TextView
        android:id="@+id/btn_assign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/modify_btn"
        android:fontFamily="@font/roboto_bold"
        android:paddingLeft="30dp"
        android:paddingTop="10dp"
        android:paddingRight="30dp"
        android:paddingBottom="10dp"
        android:text="@string/assign"
        android:textColor="#ffffff"
        app:layout_constraintBottom_toBottomOf="@+id/btn_cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.18"
        app:layout_constraintStart_toEndOf="@+id/btn_cancel"
        app:layout_constraintTop_toBottomOf="@+id/tv_date"
        app:layout_constraintVertical_bias="0.97" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_cancel"
        tools:ignore="MissingConstraints" />
</androidx.constraintlayout.widget.ConstraintLayout>