<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:clickable="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_title"
        style="@style/TextAppearance.AppCompat.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/modify_task"
        android:textColor="#1b5287"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/tv_task_name"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/uneditable"
        android:fontFamily="@font/roboto"
        android:gravity="center_vertical"
        android:padding="10dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="30dp"
        android:textSize="14sp"
        android:text="Task "
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title"
        tools:ignore="RtlHardcoded"
        android:textColor="#2d2d2d" />

    <TextView
        android:id="@+id/tv_task_Details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/uneditable"
        android:fontFamily="@font/roboto"
        android:gravity="center_vertical"
        android:padding="10dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="10dp"
        android:textSize="14sp"
        android:text="Task Details"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_task_name"
        tools:ignore="RtlHardcoded"
        android:textColor="#2d2d2d" />
    <LinearLayout
        android:id="@+id/tv_status"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="40dp"
        android:paddingStart="10dp"
        android:gravity="center_vertical"
        android:background="@drawable/edit_text_border"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tv_task_Details"
        app:layout_constraintTop_toBottomOf="@+id/tv_task_Details"
        android:orientation="horizontal"
        tools:ignore="RtlSymmetry">

        <Spinner
            android:id="@+id/autoCompleteTextView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:prompt="@string/status" />
    </LinearLayout>
    <TextView
        android:id="@+id/tv_date"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="40dp"
        android:gravity="center_vertical"
        android:background="@drawable/uneditable"
        android:textSize="14sp"
        android:hint="@string/dd_mm_yyyy"
        android:textColorHint="#818181"
        android:textColor="#2d2d2d"
        android:padding="16dp"
        android:focusable="false"
        android:fontFamily="@font/roboto"
        app:drawableRightCompat="@drawable/date_picker"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tv_status"
        app:layout_constraintTop_toBottomOf="@+id/tv_status" />
    <EditText
        android:id="@+id/ed_note"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="10dp"
        android:hint="@string/note"
        android:gravity="left"
        android:padding="14dp"
        android:textSize="14sp"
        android:fontFamily="@font/roboto"
        android:textColor="#2d2d2d"
        android:singleLine="false"
        android:background="@drawable/edit_text_border"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_date"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:id="@+id/btn_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/cancel_btn"
        android:fontFamily="@font/roboto_bold"
        android:paddingLeft="30dp"
        android:paddingTop="10dp"
        android:paddingRight="30dp"
        android:paddingBottom="10dp"
        android:text="@string/cancel"
        android:textColor="#1b5287"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.28"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_note" />

    <TextView
        android:id="@+id/btn_modify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/modify_btn"
        android:fontFamily="@font/roboto_bold"
        android:paddingLeft="30dp"
        android:paddingTop="10dp"
        android:paddingRight="30dp"
        android:paddingBottom="10dp"
        android:text="@string/modify"
        android:textColor="#ffffff"
        app:layout_constraintBottom_toBottomOf="@+id/btn_cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.18"
        app:layout_constraintStart_toEndOf="@+id/btn_cancel"
        app:layout_constraintTop_toBottomOf="@+id/ed_note"
        app:layout_constraintVertical_bias="0.97" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_cancel"
        tools:ignore="MissingConstraints" />
</androidx.constraintlayout.widget.ConstraintLayout>