<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:clickable="true"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#1b5287"
        android:gravity="center_vertical"
        android:orientation="horizontal">


        <ImageView
            android:id="@+id/back"
            android:layout_width="50dp"
            android:layout_height="35dp"
            android:layout_marginLeft="5dp"
            android:padding="3dp"
            app:srcCompat="?attr/actionModeCloseDrawable"
            app:tint="#ffffff" />

        <TextView
            style="@style/TextAppearance.AppCompat.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:text="@string/report_abuse"
            android:textColor="#ffffff" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="18dp"
            android:gravity="center_vertical"
            android:background="@drawable/edit_text_border"
            android:weightSum="10"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/autoComplete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="9.25"
                android:popupBackground="#ffffff"
                android:prompt="@string/status" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.75"
                android:layout_marginTop="7dp"
                android:layout_gravity="center"
                app:srcCompat="@drawable/chevron_right" />
        </LinearLayout>

        <EditText
            android:id="@+id/tv_date"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:focusable="false"
            android:textSize="14sp"
            android:fontFamily="@font/roboto"
            android:background="@drawable/edit_text_border"
            android:hint="@string/dd_mm_yyyy"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingStart="10dp"
            android:paddingEnd="15dp"
            android:textColor="#2d2d2d"
            android:textColorHint="#818181"
            app:drawableRightCompat="@drawable/date_picker"
            tools:ignore="RtlSymmetry" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/edit_text_border"
            android:fontFamily="@font/roboto"
            android:gravity="left|center_vertical"
            android:padding="2dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/btn_browse"
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@drawable/browse_bg"
                android:fontFamily="@font/roboto"
                android:gravity="center"
                android:paddingLeft="20dp"
                android:paddingTop="10dp"
                android:paddingRight="20dp"
                android:paddingBottom="10dp"
                android:textSize="12sp"
                android:text="@string/browse"
                android:textColor="#d3d8e3" />

            <EditText
                android:id="@+id/tv_path"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:fontFamily="@font/roboto"
                android:textSize="14sp"
                android:focusable="false"
                android:background="@android:color/transparent"
                android:paddingStart="7dp"
                android:hint="@string/no_attachment"
                android:textColor="#2d2d2d"
                android:textColorHint="#818181"
                tools:ignore="RtlSymmetry" />
        </LinearLayout>

        <EditText
            android:id="@+id/ed_feedback"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/edit_text_border"
            android:fontFamily="@font/roboto"
            android:gravity="left"
            android:hint="@string/your_report"
            android:padding="10dp"
            android:textSize="14sp"
            android:singleLine="false"
            android:textColor="#2d2d2d"
            android:textColorHint="#818181"
            tools:ignore="RtlHardcoded" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/confidential"
            android:fontFamily="@font/roboto"
            android:gravity="center"
            android:padding="15dp"
            android:textSize="14sp"
            android:text="The details submitted are confidential and\naccessed to HR head."
            android:textColor="#2d2d2d"
            android:textStyle="bold"
            tools:ignore="RtlSymmetry" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/btn_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/cancel_btn"
                android:fontFamily="@font/roboto_bold"
                android:paddingLeft="30dp"
                android:paddingTop="10dp"
                android:paddingRight="30dp"
                android:paddingBottom="10dp"
                android:text="Cancel"
                android:textColor="#1b5287" />

            <Space
                android:layout_width="15dp"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_cancel"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/tv_submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/modify_btn"
                android:fontFamily="@font/roboto_bold"
                android:paddingLeft="30dp"
                android:paddingTop="10dp"
                android:paddingRight="30dp"
                android:paddingBottom="10dp"
                android:text="Submit"
                android:textColor="#ffffff" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>